# Respgeomlib

./: .gitignore  LICENSE  README.md  decorative-stl.mjs  pyproject.toml  requirements.txt  requirements_studio.txt  script.js  styles.css  tree_builder.py
app/: airway_studio.py
assets/figures/: airway_closed_validation_stenosis.stl
assets/models/: airway_stenosis.glb
ct_respgeomlib/decompose/: block_decomposition.py
ct_respgeomlib/export/: respgeomlib_yaml.py
ct_respgeomlib/graph/: airway_graph.py  shared_ports.py
docs/: ARCHITECTURE.md
examples/: example_Y_union.py  example_curved_pipe_vis.py  example_cylinder_vis.py  example_human_airway_colored.py  example_human_airway_screenshots.py  example_oriented_cylinder.py  example_y3_implicit_vis.py  example_y_implicit_vis.py  example_y_vis.py  example_y_vis_smooth.py  tree_example.py  tree_example_y3.py
examples/ct_reconstruction/: block_decomposition_demo.py  build_exported_yaml_mesh.py  export_respgeomlib_yaml_demo.py  shared_port_graph_demo.py  strict_interface_validation.py  synthetic_airway_graph_demo.py  (+1 more)
respgeomlib/: __init__.py  curved_primitives.py  frames.py  implicit_y.py  implicit_y3.py  junctions.py  merge_trees.py  morphometry_rules.py  morphometry_summary.py  primitives.py  segments.py  tree_builder.py
scripts/: build_mesh.py
tools/: convert_stl_to_glb.py
trees/: example_tree.yaml  human_central_v1.yaml  human_central_v2_weibel.yaml  human_central_v2_weibel_with_right_subtree.yaml  right_lung_subtree_auto.yaml  stenosis_test.yaml
website/: README.md  airway-stl-viewer.mjs  index.html
(+5 files in other folders)
